# vulkano-issue-repro

./: Cargo.toml
src/: main.rs  shader.frag  shader.vert
