[package]
name = "vulkano-upgrade-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
image = "0.23.14"
vulkano = "0.28"
vulkano-shaders = "0.28"
vulkano-win = "0.28"
winit = "0.26.1"
