[package]
name = "vulkano-upgrade-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.8.0"
cgmath = "0.18.0"
image = "0.23.14"
vulkano = "0.29"
vulkano-shaders = "0.29"
vulkano-win = "0.29"
winit = "0.26.1"
